helloworld-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
  namespace: gitlab-agent
spec:
  type: NodePort
  ports:
  - port: 8200
    protocol: TCP
    nodePort: 31000
    targetPort: 8200
  selector:
    app: helloworld
