helloworld-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: gitlab-agent
  annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  #  kubernetes.io/ingress.class: nginx
  #  kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing #외부에 노출
    alb.ingress.kubernetes.io/target-type: ip #target  ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
  #  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8200}, {"HTTPS": 8443}]'
spec:
  ingressClassName: "alb"
  rules:
  #- host: "altstb-4086092e28952384.elb.us-east-1.amazonaws.com"
   - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: helloworld-svc
            port:
              number: 8200
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-svc
            port:
              number: 8200
